--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@layer reset, base;
+@layer reset, layout;
 
 @layer reset {
   /* Box sizing rules */
@@ -98,7 +98,21 @@
   }
 }
 
-@layer defaults {
+@layer layout {
+  .wrapper {
+    max-width: 1130px;
+    margin-inline: auto;
+    padding-inline: 1rem;
+  }
+
+  .wrapper--narrow {
+    max-width: 720px;
+  }
+
+  .wrapper--wide {
+    max-width: 1330px;
+  }
+
   :root {
     --colour-white: #faf9f6;
     --colour-black: #343434;
